# capstone

./: .gitignore  CMakeLists.txt  CapstoneOpenCV.sln  CapstoneOpenCV.vcxproj  CapstoneOpenCV.vcxproj.filters  Cargo.toml  Imaging.cpp  Imaging.h  LICENSE  MotorController.cpp  MotorController.h  PID_Ctrl.cpp  PID_Ctrl.h  PID_Ctrl_Test.cpp  README.md  Robot.cpp  Robot.h  jetson_ui_scp.bash  main.cpp  motor_controller.cpp  motor_controller.h  openocd.cfg  point.h  testing.csv
include/core/: Robot.h  motor_controller.h
jetson/: CMakeLists.txt  log.txt
jetson/include/algorithms/: cluster.h  frame_transform.h
jetson/include/communication/: comm.h  log.h
jetson/include/core/: cluster.h  constants.h  dimensions.h  imaging.h  motor_controller.h  point.h  robot.h
jetson/src/algorithms/: cluster.cpp  frame_transform.cpp
jetson/src/communication/: comm.cpp  log.cpp
jetson/src/core/: PID_Ctrl.cpp  cluster.cpp  imaging.cpp  main.cpp  motor_controller.cpp  pid_ctrl.cpp  robot.cpp
mcu1/: CMakeLists.txt  log.txt
mcu1/blink/: sdkconfig  sdkconfig.old
mcu1/blink/main/: CMakeLists.txt  addresses.h  blink_example_main.c  constants.h  encoder.c  encoder.h  gpio.c  gpio.h  i2c.c  i2c.h  main.c  mc_drive.c  mc_drive.h  mc_stepper.c  mc_stepper.h  mcu_e.c  mcu_e.h  mcu_gpio.c  mcu_gpio.h  mcu_m.c  mcu_m.h  spi.c  spi.h  t_integration.c  t_integration.h
mcu1/include/communication/: log.h  spi.h
mcu1/src/communication/: log.c  spi.c
mcu1/src/core/: main.c
mcu_encoder/: sdkconfig
mcu_encoder/main/: gpio_example_main.c
rotary_encoder/: README.md  sdkconfig  sdkconfig.old
rotary_encoder/main/: rotary_encoder_example_main.c
scripts/: clustering.py  flower.py  plotting.py  utils.py
src/core/: Imaging.cpp  PID_Ctrl.cpp  Robot.cpp  main.cpp  motor_controller.cpp
