cmake_minimum_required(VERSION 3.0)
project( jetson )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${CMAKE_SOURCE_DIR}/include/core )
include_directories( ${CMAKE_SOURCE_DIR}/include/communication )
add_executable( jetson.exe src/communication/log.cpp src/communication/comm.cpp src/core/imaging.cpp  src/core/pid_ctrl.cpp src/core/motor_controller.cpp src/core/robot.cpp src/core/main.cpp)
target_link_libraries( jetson.exe ${OpenCV_LIBS} )
target_link_libraries( jetson.exe  i2c )
MESSAGE ( include directories ) 